# 3D-Structure-Based-Liabilities

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: ane-review-pass.md  drop-confident-filter-slot.md  implement-offline-review-findings.md  m2-feature-pass.md  migrate-to-structurer.md  numbering-imgt-only.md  primaryref-and-r52-r53-r54.md  publish-stable-by-default.md  sdk-deps-bump.md  sequence-liabilities.md  short-toys-think.md  spec-compliance-pass.md  surfaced-motifs-summary.md
.github/workflows/: build.yaml  (+1 more)
block/: CHANGELOG.md  package.json
docs/: description.md
model/: CHANGELOG.md  package.json
software/: CHANGELOG.md  Dockerfile  package.json  pyproject.toml
software/liabilities-script/: cysteines.py  main.py  metrics.py  motifs.py  requirements.txt  scoring.py  structure.py
software/liabilities-script/data/: Hydrophobics.txt  heavy_atom_max_sasa.tsv  thresholds.json
software/liabilities-script/tests/: conftest.py  pdb_fixtures.py  test_main.py  test_scoring.py  test_structure.py
software/scripts/: derive_ala_x_ala_refs.py
software/src/: ala_x_ala_refs.json  biochem.py  cysteines.py  diagnostics.py  main.py  metrics.py  motifs.py  numbering.py  parser.py  pframe_writer.py  run_liabilities.py  scoring.py
software/src/data/: thresholds.json
software/src_python/: hello.py
software/tests/: conftest.py  test_main.py  test_motifs.py  test_scoring.py  test_structure.py
test/: package.json  tsconfig.json
ui/: CHANGELOG.md  package.json
workflow/: CHANGELOG.md  package.json
(+49 files in other folders)
